raspberrypi-k3s-cluster/pihole/08-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirecthttps
  namespace: pihole
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-admin-page
  namespace: pihole
spec:
  replacePathRegex:
    regex: ^/$
    replacement: /admin
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-server-http
  namespace: pihole
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`pihole.home.maxanderson.tech`)
      priority: 10
      middlewares:
        - name: redirect-admin-page
          namespace: pihole
      services:
        - name: pihole-ui-svc
          port: 80
  tls: {} # Don't specify TLS and allow Traefik to select the default TLS store
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-server-https
  namespace: pihole
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`pihole.home.maxanderson.tech`)
      priority: 10
      middlewares:
        - name: redirecthttps
          namespace: pihole
      services:
        - name: pihole-ui-svc
          port: 80
